# Lab2_2sem

./: CMakeLists.txt  Lab2_2.cpp  README.md  classes.cpp  classes.h  correct_input_testing  definitions.h  draw_func.cpp  draw_func.h  func.cpp  func.h  main.cpp  print_func.cpp  print_func.h  struct.cpp  struct.h  structs.cpp  structs.h  table_func.cpp  table_func.h  testing_script  wrong_input_testing
Testing/: correct_input_testing  test_file1  test_file2  wrong_input_testing
structs_lib/: CMakeLists.txt  structs_lib.cpp  structs_lib.h
